test/tests/stages/14_pointers/invalid_types/divide_pointer.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[28]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(x)
  =
  const int(10)
  ;
  int
  *
  identifier(y)
  =
  &
  identifier(x)
  ;
  (
  identifier(y)
  /
  const int(8)
  )
  ;
  return
  const int(0)
  ;
  }
